Adicionar diretiva para mostrar o quiz

--- a/Unico teste real da internet/quiz/quiz.html
+++ b/Unico teste real da internet/quiz/quiz.html
@@ -1,18 +1,4 @@
 <div class = "questions">
-    <div class = "caixa">
-        <div class = "top-part">
-            <div class = "pergunta">
-                {{questao.pergunta}}  
-            </div>
-            <span>
-                <button ng-if = "nPergunta > 0" ng-click="retrocederPergunta()">Questão Anterior</button>
-            </span>
-        </div>
-        <div class = "respostas">
-            <span ng-repeat="resposta in questao.respostas">
-            <button ng-click="avancarPergunta(resposta.nota)">{{resposta.resposta}}</button> 
-            </span>
-        </div>
-    </div>
+    <mostrar-quiz parte="{{parteQuiz}}"></mostrar-quiz>    
 </div>
 
