--- a/Unico teste real da internet/index.html
+++ b/Unico teste real da internet/index.html
@@ -67,6 +67,7 @@
 
     <script src='quiz/quiz.controller.js'></script>
     <script src='quiz/quiz.service.js'></script>
+    <script src='quiz/quiz.directive.js'></script>
 
     <script src='resultado/resultado.controller.js'></script>
 
