--- a/Unico teste real da internet/criacaoQuiz/parte2.html
+++ b/Unico teste real da internet/criacaoQuiz/parte2.html
@@ -27,7 +27,7 @@
                     <i class="fa fa-certificate" aria-hidden="true"></i> 
                     <label>
                         nota:
-                        <input type="number" min="0" max="10" ng-model="pergunta.respostas[$index].nota" class="rounded-input nota-input">
+                        <input type="number" ng-model="pergunta.respostas[$index].nota" class="rounded-input nota-input">
                     </label>
                     <i class="fa fa-trash link" ng-click="removerResposta($index)"></i>
                 </span>
