Tweaks básicos nas telas do Quiz.
Fix no display de tags, altura mínima para o display do quiz, entre outros.

--- a/Unico teste real da internet/quiz/parte1.html
+++ b/Unico teste real da internet/quiz/parte1.html
@@ -6,10 +6,9 @@
 <div class="quiz-info">
     <p class="justified-text">{{quiz.resumo}}</p>
     <img ng-src="{{quiz.foto}}">
-    <span>Tags:</span>
-    <section class="tags">        
-        <a ng-repeat="tag in quiz.tags track by $index" ng-href="/#!/tag/{{tags}}" class="link">
-            <i class="fa fa-hashtag" aria-hidden="true"></i>{{tag}}
+    <section class="tags">         
+        <a ng-repeat="tags in quiz.tags track by $index" ng-href="/#!/tag/{{tags}}" class="link">
+            <i class="fa fa-hashtag" aria-hidden="true"></i>{{tags}}
         </a>
     </section>
 </div>
