--- a/Unico teste real da internet/quiz/parte2.html
+++ b/Unico teste real da internet/quiz/parte2.html
@@ -1,13 +1,15 @@
-<div class="top-part">
-    <div class="pergunta">
-        {{questao.pergunta}}
-    </div>
-    <span>
-        <button ng-if = "nPergunta > 0" ng-click="retrocederPergunta()">Questão Anterior</button>
-    </span>
-</div>
-<div class="respostas">
-    <span ng-repeat="resposta in questao.respostas">
-        <button ng-click="avancarPergunta(resposta.nota)">{{resposta.resposta}}</button> 
+<div class="caixa">
+    <div class="top-part">
+        <div class="pergunta">
+            {{questao.pergunta}}
+        </div>
+        <span>
+            <button ng-if = "nPergunta > 0" ng-click="retrocederPergunta()">Questão Anterior</button>
         </span>
+    </div>
+    <div class="respostas">
+        <span ng-repeat="resposta in questao.respostas">
+            <button ng-click="avancarPergunta(resposta.nota)">{{resposta.resposta}}</button> 
+            </span>
+    </div>
 </div>
