Beautify no display de respostas durante criação dos quizzes

--- a/Unico teste real da internet/criacaoQuiz/parte2.html
+++ b/Unico teste real da internet/criacaoQuiz/parte2.html
@@ -20,16 +20,16 @@
         </section>
         <ul class="quiz-respostas">
             <div ng-repeat="resposta in pergunta.respostas track by $index" class="resposta-li-wrapper">
-                <li  class="list-respostas"> 
-                    <span class="vertical-middle">{{resposta.resposta}}</span>
+                <li class="list-respostas"> 
+                    <p>{{resposta.resposta}}</p>
                 </li>
                 <span>
-                    <i class="fa fa-certificate" aria-hidden="true"></i> 
-                    <label>
-                        nota:
-                        <input type="number" ng-model="pergunta.respostas[$index].nota" class="rounded-input nota-input">
+                    <i class="fa fa-certificate iconeResposta" aria-hidden="true"></i> 
+                    <label class="labelNota">
+                        Nota:
+                        <input required ng-value="0" type="number" ng-model="pergunta.respostas[$index].nota" class="rounded-input nota-input" max="5" min="0">
                     </label>
-                    <i class="fa fa-trash link" ng-click="removerResposta($index)"></i>
+                    <i class="fa fa-trash link iconeResposta" ng-click="removerResposta($index)"></i>
                 </span>
             </div>
         </ul>
