--- a/Unico teste real da internet/usuario/perfil.html
+++ b/Unico teste real da internet/usuario/perfil.html
@@ -5,9 +5,9 @@
     </article>
     
     <div class="user-titulodescricao">
-        <p>Sobre mim:
-            <article class="user-descricao">
-        </p>{{usuario.descricao}}</p>
+        <p>Sobre mim:</p>
+        <article class="user-descricao">
+        <p class="textBox">{{usuario.descricao}}</p>
         <div ng-show="checarUser()">
             <a ng-click="editarPerfil()"> <i class="fa fa-pencil"></i></a>
             <form class="modal" id="modal">
@@ -23,14 +23,23 @@
             </form>
         </div>
         </article>
+        <div ng-hide="usuario.descricao" class="title">
+            <p ng-hide="checarUser()">
+            Esse usuário ainda não escreveu nos deu uma descrição
+            </p>
+            <p ng-show="checarUser()">
+            Você ainda não escreveu sua descrição! Conte ao mundo algo sobre você!
+            </p>
+        </div>
+        
     </div>
 
     <div>
-        <h3 class="title"> Quizzes do usuário, pag {{nPagina}} </h3>
+        <h3 class="title"> QUIZZES DO USUÁRIO: PÁG {{nPagina}} </h3>
         <div class="quizzes">
             <section class="quizBox" ng-repeat="quiz in quizzes track by $index">
                 <div>
-                    <p class="quiztitle"> <a ng-href="/#!/quiz/{{quiz.id}}"> {{quiz.titulo}}      </a></p>
+                    <p class="quiztitle textBox"> <a ng-href="/#!/quiz/{{quiz.id}}"> {{quiz.titulo}}      </a></p>
                     <div class="foto"><a ng-href="/#!/quiz/{{quiz.id}}"><img ng-src="{{quiz.foto}}"></a></div>
                     <p class="resumo"> {{quiz.resumo}} </p>
                 </div>
