--- a/Unico teste real da internet/usuario/perfil.html
+++ b/Unico teste real da internet/usuario/perfil.html
@@ -18,7 +18,7 @@
                         <label >Foto de Perfil: <input type="text" class= "form-edicao" ng-model="usuarioCopia.foto"></label>
                         <label class="texto-edicao-nome">Nome: <input type="text" class="form-edicao" ng-model="usuarioCopia.nome"> </label>
                         <label>Descrição: <textarea type="text" rows="5" cols="50" class="form-edicao" ng-model="usuarioCopia.descricao" maxlength="500"></textarea></label>
-                        <button ng-click="atualizarPerfil()"class = "botao-salvar-edicao"><i class="fa fa-floppy-o" aria-hidden="true"></i></button>
+                        <button ng-click="atualizarPerfil()"><i class="fa fa-floppy-o" aria-hidden="true"></i></button>
                     </div>
                 </form>
             </div>
