--- a/Unico teste real da internet/criacaoQuiz/parte1.html
+++ b/Unico teste real da internet/criacaoQuiz/parte1.html
@@ -21,6 +21,44 @@
             <textarea class="rounded-input" ng-model="quiz.resumo" required name="resumo"></textarea>
             <small ng-show="perguntaForm.resumo.$error.required && perguntaForm.resumo.$touched">Preencha com um URL</small>            
         </label>
+        <section>
+            <span>Modalidades:</span>
+            <section>
+                <h3 class="link modalidade-btn" ng-click="selecionarTipoQuiz('pessoal')" ng-class="{'modalidade-btn-active': opened.pessoal}">Quiz pessoal</h3>
+                <p class="modalidade-desc" ng-class="{'modalidade-desc-active': opened.pessoal}">
+                    Quizzes "pessoais" são quizzes sobre você: 
+                    Eles só podem ter uma resposta certa por pergunta, 
+                    e devem se tratar dos teus gostos, opiniões, entre outros. 
+                    Só podem ser realizados uma vez.
+                </p>
+            </section>
+            <section>
+                <h3 class="link modalidade-btn" ng-click="selecionarTipoQuiz('pontuacao')" ng-class="{'modalidade-btn-active': opened.pontuacao}">Quiz de pontuação</h3>
+                <p class="modalidade-desc" ng-class="{'modalidade-desc-active': opened.pontuacao}">
+                    Quizzes "de pontuação" são aqueles que contribuem 
+                    com o seu "Score" dentro do site, aumentando sua pontuação, 
+                    e assim, melhorando sua posição no Ranking geral. 
+                    Podem ter mais de uma resposta "certa", e a nota que cada 
+                    resposta pode dar ao usuário varia de 0 a 5. Só podem ser 
+                    realizados uma vez.
+                </p>
+            </section>
+            <section>
+                <h3 class="link modalidade-btn" ng-click="selecionarTipoQuiz('generico')" ng-class="{'modalidade-btn-active': opened.generico}">Quiz genérico</h3>
+                <p class="modalidade-desc" ng-class="{'modalidade-desc-active': opened.generico}">
+                    Quizzes "genéricos", assim como o nome diz, são 
+                    aqueles onde vemos na maioria dos sites. São quizzes
+                    onde, de acordo com as respostas que o usuário insere,
+                    ele recebe uma "classificação" no final, dependendo da 
+                    pontuação que obteve. Cada resposta necessita ter "nota"
+                    diferente das outras respostas. Esses quizzes, além das
+                    perguntas e respostas, necessitam também de "resultados",
+                    onde o criador insere quais as classificações possiveis
+                    e qual o "range" de cada uma. Podem ser realizados 
+                    múltiplas vezes.
+                </p>
+            </section>
+        </section>
     </div>
 
 </div>
