Apagar codigo duplicado

--- a/Unico teste real da internet/criacaoQuiz/parte1.html
+++ b/Unico teste real da internet/criacaoQuiz/parte1.html
@@ -23,7 +23,7 @@
         </label>
         <section>
             <span>Modalidades: <br/></span>
-            <span>Selecionada: {{modalidadeSelecionada}}</span>
+            <span>Selecionada: {{quiz.modalidade}}</span>
             <section class="modalidade-box" ng-class="{'modalidade-box-active': opened.pessoal}">
                 <h3 class="link modalidade-btn" ng-click="selecionarTipoQuiz('pessoal')" ng-class="{'modalidade-btn-active': opened.pessoal}">Quiz pessoal</h3>
                 <p class="modalidade-desc" ng-class="{'modalidade-desc-active': opened.pessoal}">
