--- a/Unico teste real da internet/quiz/quiz.html
+++ b/Unico teste real da internet/quiz/quiz.html
@@ -1,4 +1,4 @@
 <div class = "questions">
-    <mostrar-quiz parte="{{parteQuiz}}"></mostrar-quiz>    
+    <mostrar-quiz parte="3"></mostrar-quiz>    
 </div>
 
