--- a/Unico teste real da internet/criacaoQuiz/parte2.html
+++ b/Unico teste real da internet/criacaoQuiz/parte2.html
@@ -2,8 +2,9 @@
     <div class="pergunta">
         <label>
             Pergunta:
-            <input type="text" class="rounded-input" name="pergunta" placeholder="Quanto é 1 + 1?" required ng-minlength="10" ng-model="pergunta.pergunta">
+            <input type="text" class="rounded-input" ng-maxlength="100" name="pergunta" placeholder="Quanto é 1 + 1?" required ng-minlength="10" ng-model="pergunta.pergunta">
             <small ng-show="perguntaForm.pergunta.$error.minlength">No minimo 10 caracteres<br/></small>
+            <small ng-show="perguntaForm.pergunta.$error.maxlength">No máximo 100 caracteres<br/></small>
             <small ng-show="perguntaForm.pergunta.$error.required && perguntaForm.pergunta.$touched">Preencha o campo<br/></small>            
         </label>        
     </div>
@@ -12,9 +13,10 @@
         <h4>Respostas: (mínimo 2)</h4>
         <section class="resposta-input-wrapper">            
             <small class="resposta-desc">adicionar resposta:</small>
-            <input type="text" name="resposta" class="rounded-input resposta-input" ng-minlength="3" ng-model="resposta" placeholder="Provavelmente 2!" required>  
+            <input type="text" name="resposta" class="rounded-input resposta-input" ng-maxlength="70" ng-minlength="3" ng-model="resposta" placeholder="Provavelmente 2!" required>  
             <button class="resposta-button-inline" ng-click="adicionarResposta(resposta)">Adicionar</button>
             <small ng-show="perguntaForm.resposta.$error.minlength">No minimo 3 caracteres</small>
+            <small ng-show="perguntaForm.resposta.$error.maxlength">No máximo 70 caracteres<br/></small>
             <small ng-show="perguntaForm.resposta.$error.required && perguntaForm.resposta.$touched">Preencha o campo</small>
         </section>
         <ul class="quiz-respostas">
@@ -26,7 +28,7 @@
                     <i class="fa fa-certificate iconeResposta" aria-hidden="true"></i> 
                     <label class="labelNota">
                         Nota:
-                        <input required ng-value="0" type="number" ng-model="pergunta.respostas[$index].nota" class="rounded-input nota-input" max="5" min="0">
+                        <input required value="0" type="number" ng-model="pergunta.respostas[$index].nota" class="rounded-input nota-input" max="5" min="0">
                     </label>
                     <i class="fa fa-trash link iconeResposta" ng-click="removerResposta($index)"></i>
                 </span>
@@ -38,9 +40,10 @@
         <h4>Respostas: (mínimo 2)</h4>
         <section class="resposta-input-wrapper">            
             <small class="resposta-desc">adicionar resposta:</small>
-            <input type="text" name="resposta" class="rounded-input resposta-input" ng-minlength="3" ng-model="resposta" placeholder="Provavelmente 2!" required>  
+            <input type="text" name="resposta" class="rounded-input resposta-input" ng-maxlength="70" ng-minlength="3" ng-model="resposta" placeholder="Provavelmente 2!" required>  
             <button class="resposta-button-inline" ng-click="adicionarResposta(resposta)">Adicionar</button>
             <small ng-show="perguntaForm.resposta.$error.minlength">No minimo 3 caracteres</small>
+            <small ng-show="perguntaForm.resposta.$error.maxlength">No máximo 70 caracteres<br/></small>
             <small ng-show="perguntaForm.resposta.$error.required && perguntaForm.resposta.$touched">Preencha o campo</small>
         </section>
         <ul class="quiz-respostas">
@@ -52,7 +55,7 @@
                     <i class="fa fa-certificate iconeResposta" aria-hidden="true"></i> 
                     <label class="labelNota">
                         Correta?
-                        <input type="radio" required name="resposta" ng-value="$index">
+                        <input ng-change="alterarRadio($index)" type="radio" required name="resposta" ng-value="1" ng-model="pergunta.respostas[$index].nota">
                     </label>
                     <i class="fa fa-trash link iconeResposta" ng-click="removerResposta($index)"></i>
                 </span>
@@ -64,9 +67,10 @@
         <h4>Respostas: (mínimo 2)</h4>
         <section class="resposta-input-wrapper">            
             <small class="resposta-desc">adicionar resposta:</small>
-            <input type="text" name="resposta" class="rounded-input resposta-input" ng-minlength="3" ng-model="resposta" placeholder="Provavelmente 2!" required>  
+            <input type="text" name="resposta" class="rounded-input resposta-input" ng-maxlength="70" ng-minlength="3" ng-model="resposta" placeholder="Provavelmente 2!" required>  
             <button class="resposta-button-inline" ng-click="adicionarResposta(resposta)">Adicionar</button>
             <small ng-show="perguntaForm.resposta.$error.minlength">No minimo 3 caracteres</small>
+            <small ng-show="perguntaForm.resposta.$error.maxlength">No máximo 70 caracteres<br/></small>
             <small ng-show="perguntaForm.resposta.$error.required && perguntaForm.resposta.$touched">Preencha o campo</small>
         </section>
         <ul class="quiz-respostas">
@@ -78,7 +82,7 @@
                     <i class="fa fa-certificate iconeResposta" aria-hidden="true"></i> 
                     <label class="labelNota">
                         Correta?
-                        <input type="radio" required name="resposta" ng-value="$index">
+                        <input ng-change="alterarRadio($index)" type="radio" required name="resposta" ng-value="$index">
                     </label>
                     <i class="fa fa-trash link iconeResposta" ng-click="removerResposta($index)"></i>
                 </span>
