--- a/Unico teste real da internet/usuario/perfil.html
+++ b/Unico teste real da internet/usuario/perfil.html
@@ -9,7 +9,7 @@
             <p>Sobre mim:</p>
             <article class="user-descricao">
             <p class="textBox">{{usuario.descricao}}</p>
-            <div ng-show="checarUser()">
+            <div ng-if="checarUser()">
                 <button class = "link" ng-click="editarPerfil()"> <i class="fa fa-pencil"></i></button>
                 <form class="modal" id="modal">
                     <div class=" modal-edicao">
@@ -23,11 +23,11 @@
                 </form>
             </div>
             </article>
-            <div ng-hide="usuario.descricao" class="title">
-                <p ng-hide="checarUser()">
+            <div ng-if="!usuario.descricao" class="title">
+                <p ng-if="!checarUser()">
                 Esse usuário ainda não escreveu nos deu uma descrição
                 </p>
-                <p ng-show="checarUser()">
+                <p ng-if="checarUser()">
                 Você ainda não escreveu sua descrição! Conte ao mundo algo sobre você!
                 </p>
             </div>
@@ -53,8 +53,8 @@
             </section>
         </div>
     </div>
-    <h1 class="title" ng-show="mensagem"> {{mensagem}} </h1>
-    <div ng-hide="mensagem" class="pagebuttons">
+    <h1 class="title" ng-if="mensagem"> {{mensagem}} </h1>
+    <div ng-if="!mensagem" class="pagebuttons">
         <a ng-show="nPagina>1" ng-click="retornarPagina()" class="aligned-center readmore link"><i class="fa fa-arrow-left" aria-hidden="true"></i> </a>
         <a ng-click="proximaPagina()" class="aligned-center readmore link"> <i class="fa fa-ellipsis-h" aria-hidden="true"></i> </a>
     </div>
