--- a/Unico teste real da internet/quiz/parte3.html
+++ b/Unico teste real da internet/quiz/parte3.html
@@ -1,9 +1,9 @@
-<div class="top-part">
+<div class="top-part top-part-resultado">
     <div class="pergunta">
         Resultado:
     </div>
 </div>
 
-<div class="quiz-info">
-    <ng-include src="pegarResultado()"></ng-include>
+<div class="quiz-info quiz-info-resultado">
+    <ng-include src="pegarResultado()" class="resultado-box"></ng-include>
 </div>
