Corrigir chamada de função infinita

--- a/Unico teste real da internet/quiz/parte3.html
+++ b/Unico teste real da internet/quiz/parte3.html
@@ -5,5 +5,5 @@
 </div>
 
 <div class="quiz-info quiz-info-resultado">
-    <ng-include src="pegarResultado()" class="resultado-box"></ng-include>
+    <ng-include ng-src="{{redirecionar}}" class="resultado-box"></ng-include>
 </div>
