--- a/Unico teste real da internet/index.html
+++ b/Unico teste real da internet/index.html
@@ -9,7 +9,6 @@
     <meta name="google-signin-scope" content="profile email">
     <meta name="google-signin-client_id" content="24339375695-sngstbgelv3cpvvgs96ndoa6n472u3n4.apps.googleusercontent.com">
     <link href="css/style.css" rel="stylesheet">
-    
 </head>
 
 <body ng-app="testeInternet">
@@ -57,6 +56,10 @@
     <script src="https://apis.google.com/js/platform.js">gapi.auth2.init({ cookie_policy: none, })</script>    
     <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.js'></script>
     <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js'></script>
+    <script src="//cdn.jsdelivr.net/alertifyjs/1.10.0/alertify.min.js"></script>
+
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/alertifyjs/1.10.0/css/alertify.min.css"/>
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/alertifyjs/1.10.0/css/themes/default.min.css"/>
 
     <script src='js/module.js'></script>
     <script src='js/auth.service.js'></script>
