--- a/Unico teste real da internet/quiz/parte3-pessoal.html
+++ b/Unico teste real da internet/quiz/parte3-pessoal.html
@@ -1,5 +1,5 @@
-<h3 class="title resultado-head">{{notaFinal}} de {{notaTotal}}</h3>
-<small class="resultado-small">Você acertou: {{notaFinal/notaTotal * 100 | number: 1}}% parabéns </small>
+<h3 class="title resultado-head">{{notaFinal}} de {{quiz.perguntas.length}}</h3>
+<small class="resultado-small">Você acertou: {{notaFinal/quiz.perguntas.length * 100 | number: 1}}% parabéns </small>
 
 
 <img ng-src="{{quiz.foto}}" class="aligned-center resultado-foto">
