Adicionada âncora até a página de ranking (ainda não concluida)

--- a/Unico teste real da internet/home/home.html
+++ b/Unico teste real da internet/home/home.html
@@ -2,7 +2,8 @@
     
     <div class="menu-home">
         <div class = "opcoes">
-            <p class="criar"> <a ng-href="/#!/criar"> Crie seu próprio Quiz! </a> </p>
+            <p> <a ng-href="/#!/criar"> Crie seu próprio Quiz! </a> </p>
+            <p> <a ng-href="/#!/ranking"> Veja o ranking! </a> </p>
             <p> <a ng-href="/#!/quizzes"> Encontre seu Quiz ideal! </a> </p>
         </div>
         <h3> QUIZZES ALEATÓRIOS </h3>
