Inserção de Ícones no menu da home e na seleção de modalidade

--- a/Unico teste real da internet/home/home.html
+++ b/Unico teste real da internet/home/home.html
@@ -2,9 +2,9 @@
     
     <div class="menu-home">
         <div class = "opcoes">
-            <p> <a ng-href="/#!/criar"> Crie seu próprio Quiz! </a> </p>
-            <p> <a ng-href="/#!/ranking"> Veja o ranking! </a> </p>
-            <p> <a ng-href="/#!/quizzes"> Encontre seu Quiz ideal! </a> </p>
+            <p> <a ng-href="/#!/criar"> <i class="fa fa-plus" aria-hidden="true"></i> Crie seu próprio Quiz! </a> </p>
+            <p> <a ng-href="/#!/ranking"> <i class="fa fa-list-ol" aria-hidden="true"></i> Veja o ranking! </a> </p>
+            <p> <a ng-href="/#!/quizzes"> <i class="fa fa-list" aria-hidden="true"></i> Encontre seu Quiz ideal! </a> </p>
         </div>
         <h3> QUIZZES ALEATÓRIOS </h3>
         <div class = "randomQuizzes">
