--- a/Unico teste real da internet/criacaoQuiz/parte1.html
+++ b/Unico teste real da internet/criacaoQuiz/parte1.html
@@ -28,7 +28,7 @@
             <span>Modalidades: <br/></span>
             <span>Selecionada: {{quiz.modalidade}}</span>
             <section class="modalidade-box" ng-class="{'modalidade-box-active': opened.pessoal}">
-                <h3 class="link modalidade-btn" ng-click="selecionarTipoQuiz('pessoal')" ng-class="{'modalidade-btn-active': opened.pessoal}">Quiz pessoal</h3>
+                <h3 class="link modalidade-btn" ng-click="selecionarTipoQuiz('pessoal')" ng-class="{'modalidade-btn-active': opened.pessoal}"><i class="fa fa-user" aria-hidden="true"></i> Quiz pessoal</h3>
                 <p class="modalidade-desc" ng-class="{'modalidade-desc-active': opened.pessoal}">
                     Quizzes "pessoais" são quizzes sobre você: 
                     Eles só podem ter uma resposta certa por pergunta, 
@@ -37,7 +37,7 @@
                 </p>
             </section>
             <section class="modalidade-box" ng-class="{'modalidade-box-active': opened.pontuacao}">
-                <h3 class="link modalidade-btn" ng-click="selecionarTipoQuiz('pontuacao')" ng-class="{'modalidade-btn-active': opened.pontuacao}">Quiz de pontuação</h3>
+                <h3 class="link modalidade-btn" ng-click="selecionarTipoQuiz('pontuacao')" ng-class="{'modalidade-btn-active': opened.pontuacao}"><i class="fa fa-list-ol" aria-hidden="true"></i> Quiz de pontuação</h3>
                 <p class="modalidade-desc" ng-class="{'modalidade-desc-active': opened.pontuacao}">
                     Quizzes "de pontuação" são aqueles que contribuem 
                     com o seu "Score" dentro do site, aumentando sua pontuação, 
@@ -48,7 +48,7 @@
                 </p>
             </section>
             <section class="modalidade-box" ng-class="{'modalidade-box-active': opened.generica}">
-                <h3 class="link modalidade-btn" ng-click="selecionarTipoQuiz('generica')" ng-class="{'modalidade-btn-active': opened.generica}">Quiz genérico</h3>
+                <h3 class="link modalidade-btn" ng-click="selecionarTipoQuiz('generica')" ng-class="{'modalidade-btn-active': opened.generica}"><i class="fa fa-random" aria-hidden="true"></i> Quiz genérico</h3>
                 <p class="modalidade-desc" ng-class="{'modalidade-desc-active': opened.generica}">
                     Quizzes "genéricos", assim como o nome diz, são 
                     aqueles onde vemos na maioria dos sites. São quizzes
