--- a/Unico teste real da internet/quiz/parte1.html
+++ b/Unico teste real da internet/quiz/parte1.html
@@ -6,7 +6,10 @@
 <div class="quiz-info">
     <p class="justified-text">{{quiz.resumo}}</p>
     <img ng-src="{{quiz.foto}}">
-    <section class="tags">         
+    <p ng-if="quiz.modalidade==='generica'" class="modalidade textBox"> <i class="fa fa-random" aria-hidden="true"></i> Modalidade: {{quiz.modalidade}} </p>
+    <p ng-if="quiz.modalidade==='pessoal'" class="modalidade textBox"> <i class="fa fa-user" aria-hidden="true"></i> Modalidade: {{quiz.modalidade}} </p>
+    <p ng-if="quiz.modalidade==='pontuacao'" class="modalidade textBox"> <i class="fa fa-list-ol" aria-hidden="true"></i> Modalidade: {{quiz.modalidade}} </p>
+    <section class="tags">
         <a ng-repeat="tags in quiz.tags track by $index" ng-href="/#!/tag/{{tags}}" class="link">
             <i class="fa fa-hashtag" aria-hidden="true"></i>{{tags}}
         </a>
