--- a/Unico teste real da internet/quiz/parte3-pontuacao.html
+++ b/Unico teste real da internet/quiz/parte3-pontuacao.html
@@ -1,8 +1,8 @@
-<section ng-if="!usuarioEhOAutor()">
-    <h3 class="title resultado-head">{{usuario.nota}} de {{notaTotal}}</h3>
-    <small class="resultado-small">Você acertou: {{usuario.nota/notaTotal * 100 | number: 1}}% parabéns </small>
+<section class = "resultadoHead" ng-if="!usuarioEhOAutor()">
+    <h3 class="title resultado-head">{{usuario.score}} de {{notaTotal}}</h3>
+    <small class="resultado-small">Você acertou: {{usuario.score/notaTotal * 100 | number: 1}}% parabéns </small>
 </section>
-<section ng-if="usuarioEhOAutor()">
+<section class = "resultadoHead" ng-if="usuarioEhOAutor()">
     <h3 class="title resultado-head" ng-if="quiz.usuariosQueResponderam.length!=0">{{quiz.usuariosQueResponderam.length}} usuários já responderam seu quiz! </h3>
     <h3 class="title resultado-head" ng-if="quiz.usuariosQueResponderam.length==0">Nenhum usuário respondeu seu quiz até agora. Divulgue-o em suas redes sociais! </h3>
 </section>
