--- a/Unico teste real da internet/quiz/parte3-generica.html
+++ b/Unico teste real da internet/quiz/parte3-generica.html
@@ -1,5 +1,5 @@
 <h3 class="title resultado-head">{{resultado.resultado}}</h3>
-<small class="resultado-small">{{notaFinal}} de {{quiz.perguntas.length}} </small>
+<p class="resultado-small">{{notaFinal}} de {{quiz.perguntas.length}} </p>
 
 <img ng-src="{{resultado.foto}}" class="aligned-center resultado-foto">
 
