--- a/Unico teste real da internet/quiz/parte3-pessoal.html
+++ b/Unico teste real da internet/quiz/parte3-pessoal.html
@@ -1,6 +1,6 @@
 <section ng-if="!usuarioEhOAutor()">
-    <h3 class="title resultado-head">{{usuario.score}} de {{quiz.perguntas.length}}</h3>
-    <small class="resultado-small">Você acertou: {{usuario.score/quiz.perguntas.length * 100 | number: 1}}% parabéns </small>
+    <h3 class="title resultado-head">{{nota2}} de {{quiz.perguntas.length}}</h3>
+    <p class="resultado-small">Você acertou: {{nota2/quiz.perguntas.length * 100 | number: 1}}% parabéns </p>
 </section>
 <section ng-if="usuarioEhOAutor()">
     <h3 class="title resultado-head" ng-if="quiz.usuariosQueResponderam.length!=0">{{quiz.usuariosQueResponderam.length}} usuários já responderam seu quiz! </h3>
