--- a/Unico teste real da internet/quiz/parte3-pontuacao.html
+++ b/Unico teste real da internet/quiz/parte3-pontuacao.html
@@ -1,6 +1,6 @@
 <section class = "resultadoHead" ng-if="!usuarioEhOAutor()">
-    <h3 class="title resultado-head">{{usuario.score}} de {{notaTotal}}</h3>
-    <small class="resultado-small">Você acertou: {{usuario.score/notaTotal * 100 | number: 1}}% parabéns </small>
+    <h3 class="title resultado-head">{{usuario.nota}} de {{notaTotal}}</h3>
+    <p class="resultado-small">Você acertou: {{usuario.nota/notaTotal * 100 | number: 1}}% parabéns </p>
 </section>
 <section class = "resultadoHead" ng-if="usuarioEhOAutor()">
     <h3 class="title resultado-head" ng-if="quiz.usuariosQueResponderam.length!=0">{{quiz.usuariosQueResponderam.length}} usuários já responderam seu quiz! </h3>
