Rename dos valores do objeto usuario.

--- a/Unico teste real da internet/client/usuario/perfil.html
+++ b/Unico teste real da internet/client/usuario/perfil.html
@@ -1,7 +1,7 @@
 <div class="hero page-div">
     <div class="userDetails">
         <article class="hero-body">
-            <img ng-src="{{usuario.foto}}" class="profile-pic img-medium hero-img">
+            <img ng-src="{{usuario.url_foto}}" class="profile-pic img-medium hero-img">
             <b class="hero-name">{{usuario.nome}}</b>
         </article>
 
@@ -14,7 +14,7 @@
                     <form class="modal" id="modal">
                         <div class=" modal-edicao">
                             <a ng-click="fecharModal()" class="link botao-fechar-edicao"> <i class="fa fa-times" aria-hidden="true"></i></a>
-                            <img ng-src="{{usuario.foto}}" class="foto-Edicao">
+                            <img ng-src="{{usuario.url_foto}}" class="foto-Edicao">
                             <label>Foto de Perfil: <input type="text" class= "form-edicao" ng-model="usuarioCopia.foto"></label>
                             <label class="texto-edicao-nome">Nome: <input type="text" class="form-edicao" ng-model="usuarioCopia.nome"> </label>
                             <label>Descrição: <textarea type="text" rows="5" cols="50" class="form-edicao form-edicao-descricao" ng-model="usuarioCopia.descricao" maxlength="500"></textarea></label>
