--- a/Unico teste real da internet/client/ranking/ranking.html
+++ b/Unico teste real da internet/client/ranking/ranking.html
@@ -4,7 +4,7 @@
         <h3 class="center-title title">Maiores 20 Scores</h3>
         <ol class="ranking20">
             <li class="flexAround" ng-repeat="usuario in top20">
-                <span class="nome">{{$index + 1}}. <a ng-href="/#!/perfil/{{usuario.id}}">{{usuario.nome}}</span>
+                <span class="nome">{{$index + 1}}. <a ng-href="/#!/perfil/{{usuario.id_usuario}}">{{usuario.nome}}</span>
                 <span class="valor">{{usuario.nota}}</span>
             </li>
         </ol>
