--- a/Unico teste real da internet/client/home/home.html
+++ b/Unico teste real da internet/client/home/home.html
@@ -9,8 +9,8 @@
         <h3> QUIZZES ALEATÓRIOS </h3>
         <div class = "randomQuizzes">
             <section class = "quizAnchor" ng-repeat="quiz in quizzes">
-                <p class = "quiztitle textBox"> <a ng-href = "/#!/quiz/{{quiz.id}}"> {{quiz.titulo}} </a> </p>                
-                <div class = "foto"> <a ng-href = "/#!/quiz/{{quiz.id}}"><img ng-src="{{quiz.foto}}"></a></div>
+                <p class = "quiztitle textBox"> <a ng-href = "/#!/quiz/{{quiz.id_quiz}}"> {{quiz.titulo}} </a> </p>                
+                <div class = "foto"> <a ng-href = "/#!/quiz/{{quiz.id_quiz}}"><img ng-src="{{quiz.foto}}"></a></div>
                 <p class = "resumo textBox"> {{quiz.resumo}} </p> 
                 <p ng-if="quiz.modalidade==='generica'" class = "modalidade textBox"> <i class="fa fa-random" aria-hidden="true"></i> Modalidade: {{quiz.modalidade}} </p>
                 <p ng-if="quiz.modalidade==='pessoal'" class = "modalidade textBox"> <i class="fa fa-user" aria-hidden="true"></i> Modalidade: {{quiz.modalidade}} </p>
