Fixado erro que não permitia salvar imagem do quiz no banco

--- a/Unico teste real da internet/client/criacaoQuiz/parte1.html
+++ b/Unico teste real da internet/client/criacaoQuiz/parte1.html
@@ -13,7 +13,7 @@
         </label>
         <label>            
             Insira a foto de capa: 
-            <input class="rounded-input" type="url" name="fotoCapa" ng-model="quiz.foto" placeholder="http://minhafoto.com/foto.jpg" required>
+            <input class="rounded-input" type="url" name="fotoCapa" ng-model="quiz.url_foto" placeholder="http://minhafoto.com/foto.jpg" required>
             <small ng-show="perguntaForm.fotoCapa.$error.url">Preencha com um URL<br/></small>
             <small ng-show="perguntaForm.fotoCapa.$error.required && perguntaForm.fotoCapa.$touched">Preencha o campo<br/></small>            
         </label>
